_sass/_work.scss
.work-item {
  clear: both;
  overflow: hidden;
  padding-bottom: 2em;
}

.work-bubble {
  // float: left;
  // padding-right: 20px;
  // padding-bottom: 1.5em;
  width: 100px;
  height: 100px;
  object-fit: cover;
}

.work-bubble-with-date {
  float: left;
  padding-right: 20px;
  padding-bottom: 1.5em;
  width: 100px;
  text-align: center;
  // height: 100px;
  // object-fit: cover;
}

